# citra

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/android/: AndroidManifest.xml  README.md  android.toolchain.cmake
src/android/res/values/: strings.xml
src/android/src/org/citraemu/citra/: MainActivity.java
src/citra_android/: CMakeLists.txt  citra.cpp  config.cpp
src/citra_android/emu_window/: emu_window_android.cpp  emu_window_android.h
src/common/: common_types.h
src/core/hle/service/: service.cpp
src/video_core/: CMakeLists.txt  command_processor.cpp  vertex_shader.cpp  vertex_shader.h  vertex_shader_to_glsl.cpp  vertex_shader_to_glsl.h
src/video_core/renderer_opengl/: gl_es2_shaders.h  gl_shader_util.cpp  gl_shader_util.h  renderer_opengl.cpp  renderer_opengl.h
